deployment/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edc-gateway
  namespace: edc
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: Same  #or Same or Selector
        kinds:
          - kind: HTTPRoute
            group: gateway.networking.k8s.io
